<?xml version="1.0"?>
<package>
  <name>velocity_control</name>
  <version>1.0.0</version>
  <description>The velocity_control package</description>

  <maintainer email="sp.garyf@gmail.com">Spyridon Garyfallidis</maintainer>
  <license>BSD</license>
  <url type="website">http://csl-ep.mech.ntua.gr/</url>
  <author email="sp.garyf@gmail.com">Spyridon Garyfallidis</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
